test_files/fails/s_unify_nonstable_and_stable_in_application.ar
let rec foo = \x ->
    delay ((x, adv (wait keyboard)) :: foo x);

console <- ((\x -> x), "") :: foo (\x -> x);
